--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,13 +16,6 @@ hr {
     margin: 15px 0; /* Jarak atas dan bawah */
 }
 
-.underline-heading {
-    text-decoration: underline; /* Apply underline to the text */
-    text-decoration-color: #000; /* Optional: specify the color of the underline */
-}
-
-
-
 /* ----------LAYOUT BLADE---------- */
 /* Menu navigasi di tengah */
 .navbar-collapse {
@@ -86,6 +79,15 @@ footer {
 
 /* ---------------INDEX BLADE--------------- */
 /* --- Tombol Carousel di Banner --- */
+.index-background {
+    height: 100%;
+    background-image: url(/images/motif.png),linear-gradient(to bottom, #275241, #000000);
+    background-repeat: repeat;
+        background-size: cover;
+        background-attachment: fixed;
+        /* Efek parallax */
+        color: white;
+}
 .banner-control-prev, .banner-control-next {
     width: 60px;
     height: 60px;
@@ -173,8 +175,12 @@ footer {
     color:#F4D2A3; /* Ganti dengan warna yang diinginkan */
 }
 
+.container h3 {
+    color: #F4D2A3;
+}
+
 .container .info h2{
-    color: #0A4833;
+    color: #F4D2A3;
     font-size: 40px;
 }
 
@@ -190,19 +196,117 @@ footer {
     box-shadow: 0 8px 8px rgba(0, 0, 0, 0.1);
 }
 
+.card.custom-card-recommendations {
+    height: 300px;
+    width: 350px;
+    overflow: hidden;
+    position: relative;
+}
+
+.card.custom-card-recommendations img {
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+}
+
+.card.custom-card-recommendations .hover-title {
+    position: absolute;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.6);
+    color: #fff;
+    width: 100%;
+    padding: 10px;
+    text-align: left;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+}
+
+.card.custom-card-recommendations:hover .hover-title {
+    opacity: 1;
+}
+
 .why-choose-us {
     margin-top: 100px !important;
 }
 .why-choose-us .card {
-    min-height: 350px; /* Adjust this value as needed */
+    min-height: 300px; /* Adjust this value as needed */
+}
+.bg-dark-green {
+    background-color: #275241;
+    /* Hijau tua */
+    color: white;
+}
+
+.layanan {
+    margin-top: 100px !important;
+}
+.layanan .card {
+    min-height: 200px;
 }
 
 .design-packages {
     margin-top: 100px !important;
 }
 
+.card.custom-card-packages {
+    height: 350px;
+    width: 350px;
+    overflow: hidden;
+    position: relative;
+}
+
+.card.custom-card-packages img {
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+}
+
+.card.custom-card-packages .hover-title {
+    position: absolute;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.6);
+    color: #fff;
+    width: 100%;
+    padding: 10px;
+    text-align: left;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+}
+
+.card.custom-card-packages:hover .hover-title {
+    opacity: 1;
+}
+
 .latest-projects {
     margin-top: 100px !important;
+}
+
+.card.custom-card-portofolio {
+    height: 350px;
+    overflow: hidden;
+    position: relative;
+}
+
+.card.custom-card-portofolio img {
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+}
+
+.card.custom-card-portofolio .hover-title {
+    position: absolute;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.6);
+    color: #fff;
+    width: 100%;
+    padding: 10px;
+    text-align: left;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+}
+
+.card.custom-card-portofolio:hover .hover-title {
+    opacity: 1;
 }
 
 .image-container {
@@ -331,6 +435,12 @@ footer {
   
 
 /* ---------------CATALOG BLADE-------------- */
+.catalog-background {
+    background-image: url(/images/motif.png);
+    background-repeat: repeat;
+    background-size: cover;
+    background-attachment: fixed;
+}
 .card {
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -417,6 +527,13 @@ footer {
 }
 
 /* ------------CONTACT BLADE-------------- */
+.contact-background {
+    height: 100%;
+    background-image: url(/images/motif.png);
+    background-repeat: repeat;
+    background-size: cover;
+    background-attachment: fixed;
+}
 /* Gaya untuk Header Contact */
 .contact-header {
     position: relative;
@@ -460,6 +577,17 @@ iframe {
 }
 
 /* ------------------DETAIL KATALOG----------------- */
+.detail-background {
+    height: 100%;
+    background-image: url(/images/motif.png);
+    background-color: #FFFAF3;
+    background-repeat: repeat;
+    background-size: cover;
+    background-attachment: fixed;
+}
+.desc h3 {
+    color: black;
+}
 /* Custom style for carousel indicators as dots */
 .carousel-indicators [data-bs-target] {
     width: 10px;
