update FE detailporto, contact

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -198,7 +198,6 @@ footer {
 
 .card.custom-card-recommendations {
     height: 300px;
-    width: 350px;
     overflow: hidden;
     position: relative;
 }
@@ -250,7 +249,6 @@ footer {
 
 .card.custom-card-packages {
     height: 350px;
-    width: 350px;
     overflow: hidden;
     position: relative;
 }
@@ -408,11 +406,11 @@ footer {
     position: fixed;
     bottom: 20px;
     right: 20px;
-    background-color: #275241;
+    background-color: #0EA845;
     color: white;
     padding: 15px; /* Adjust padding to give it a rectangular shape */
     border-radius: 12px; /* Rounded corners */
-    border:2px solid #4D6957;
+    border:2px solid #275241;
     font-size: 18px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     z-index: 9999;
@@ -508,15 +506,21 @@ footer {
 }
 
 /* ------------PORTOFOLIO BLADE----------- */
+.portofolio-background {
+    background-image: url(/images/motif.png);
+    background-repeat: repeat;
+    background-size: cover;
+    background-attachment: fixed;
+}
 .line-horizontal {
-    width: 40%;
+    width: 25%;
     height: 2px;
     background-color: #000;
     margin: 10px 0;
 }
 
 .logo {
-    max-width: 100px;
+    max-width: 50px;
     height: auto;
     margin-right: 10px;
 }
@@ -524,6 +528,35 @@ footer {
 .text-left p {
     margin: 0;
     font-size: 1.2em;
+}
+
+.card.custom-card-portofoliopage {
+    height: 250px;
+    border-radius: 16px;
+    overflow: hidden;
+    position: relative;
+}
+
+.card.custom-card-portofoliopage img {
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+    display: block;
+}
+.card.custom-card-portofoliopage .hover-title {
+    position: absolute;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.6);
+    color: #fff;
+    width: 100%;
+    padding: 10px;
+    text-align: left;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+}
+
+.card.custom-card-portofoliopage:hover .hover-title {
+    opacity: 1;
 }
 
 /* ------------CONTACT BLADE-------------- */
@@ -537,7 +570,7 @@ footer {
 /* Gaya untuk Header Contact */
 .contact-header {
     position: relative;
-    background-image: url('/images/bgcontact.png'); /* Ganti dengan path gambar yang benar */
+    background-image: url('/images/bg-contact.png'); /* Ganti dengan path gambar yang benar */
     background-size: cover;
     background-position: center;
     height: 100px;
@@ -601,4 +634,45 @@ iframe {
 
 .custom-border {
     border: 1px solid black; /* Ubah warna border sesuai keinginan */
+}
+
+/*--------------DETAIL PORTOFOLIO-------------*/
+.detailporto-background {
+    height: 100%;
+    background-image: url(/images/motif.png);
+    background-color: #FFFAF3;
+    background-repeat: repeat;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+/*--------------RESPONSIVE---------------*/
+
+/* katalog page */
+@media (max-width: 768px) {
+    .btn-whatsapp {
+        bottom: 10px;
+        right: 10px;
+        width: 50px;
+        height: 50px;
+    }
+
+    .search-bar {
+        width: 100%;
+        margin: auto;
+    }
+    .search-bar input {
+        width: 100%;
+        padding-left: 40px;
+    }
+    .search-btn {
+        width: 40px;
+        padding: 0;
+    }
+    .search-bar i {
+        left: 10px;
+    }
+    .search-bar input::placeholder {
+        font-size: 14px;
+    }
 }
