--- a/public/css/style.css
+++ b/public/css/style.css
@@ -464,6 +464,17 @@ footer {
     height: 300px;
     object-fit: cover;
 }
+.card.custom-card-package {
+    height: 500px;
+    overflow: hidden;
+    position: relative;
+}
+.card.custom-card-package img {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    height: 350px;
+    object-fit: cover;
+}
 
 .card-body {
     text-align: left;
