--- a/public/css/style.css
+++ b/public/css/style.css
@@ -465,14 +465,14 @@ footer {
     object-fit: cover;
 }
 .card.custom-card-package {
-    height: 500px;
+    height: 100vh;
     overflow: hidden;
     position: relative;
 }
 .card.custom-card-package img {
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    height: 350px;
+    height: 100%;
     object-fit: cover;
 }
 
@@ -559,7 +559,7 @@ footer {
 }
 
 .card.custom-card-portofoliopage {
-    height: 250px;
+    height: 350px;
     border-radius: 16px;
     overflow: hidden;
     position: relative;
